@@ -2,45 +2,28 @@ plugins {
     id 'application'
 }
 
-version = '0.9.0'
+version = '0.7.0'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    testRuntimeOnly ( "org.junit.platform:junit-platform-launcher" )
 }
 
 test {
     useJUnitPlatform()
-    jvmArgs ( ['--enable-preview'] )
-}
-
-/*
-javadoc {
-    jvmArgs ( ['--enable-preview'] )
-}
- */
-javadoc.options {
-    addBooleanOption('-enable-preview', true)
-    addStringOption('-release', '17')
 }
 
 java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
-}
-
-tasks.withType(JavaCompile) {
-    // options.compilerArgs += [ '-Xlint:deprecation', '-Xlint:unchecked', '-Xlint:preview' ]
-    options.compilerArgs += [ '--enable-preview' ]
+    sourceCompatibility = "17"
+    targetCompatibility = "17"
 }
 
 application {
-    mainClass = 'dev.pdml.basicparser.Start'
-    applicationDefaultJvmArgs = ['-ea'] // enable assertions
+    mainClass = 'dev.pdml.core.simpleparser.Start'
 }
 
 // OS script file name to start the application
@@ -51,7 +34,7 @@ tasks.startScripts {
 jar {
     manifest {
         attributes(
-            'Main-Class': 'dev.pdml.basicparser.Start',
+            'Main-Class': 'dev.pdml.core.simpleparser.Start',
             'Class-Path': configurations.runtimeClasspath.files.collect { it.getName() }.join(' ')
         )
     }
